<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLoading"
    tools:context=".Activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="top"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnBackout"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_arrow_back_24">

        </Button>
        <TextView
            android:layout_marginLeft="50dp"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="10pt"
            android:text="@string/qlnt">

        </TextView>




    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"

        >
        <ImageButton
            android:id="@+id/imageAvatar"
            android:layout_gravity="center"
            android:src="@drawable/avatar"
            android:scaleType="fitCenter"
            android:layout_width="200dp"
            android:layout_height="200dp"
            >
        </ImageButton>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/user" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pass"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_repass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/repass"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:background="@drawable/backgroudbtnadd"
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="9pt"
            android:text="@string/register"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tvHotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Hotline : 0969840320">

        </TextView>

    </LinearLayout>

</LinearLayout>