<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoading"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_arrow_back_24">

        </Button>
        <TextView
            android:gravity="center"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="13pt"
            android:text="@string/name">

        </TextView>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/pharmacy"
            android:layout_weight="8"
            >
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"

            android:orientation="horizontal">
          <ImageView
              android:id="@+id/imgAvatar"
              android:layout_width="0dp"
              android:layout_weight="2"
              android:layout_height="match_parent">
          </ImageView>
            <TextView
                android:layout_marginLeft="10pt"
                android:id="@+id/tvID"
                android:textSize="10pt"
                android:text="ID"
                android:gravity="left|center"
                android:textColor="@color/colorID"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp"
        >
        <Button
            android:id="@+id/btnQLNT"
            android:background="@drawable/backgroudbtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/qlnt"
            android:textStyle="italic|bold"
            android:textSize="11pt"
            android:layout_weight="1">

        </Button>
        <Button
            android:id="@+id/btnQLT"
            android:background="@drawable/backgroudbtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/qlt"
            android:layout_marginTop="10dp"
            android:textStyle="italic|bold"
            android:textSize="11pt"
            android:layout_weight="1"></Button>
        <Button
            android:id="@+id/btnHD"
            android:background="@drawable/backgroudbtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic|bold"
            android:textSize="11pt"
            android:text="@string/qlhd"
            android:layout_weight="1"></Button>


    </LinearLayout>

</LinearLayout>