<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoading"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="top"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnBack2"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_arrow_back_24">

        </Button>
        <TextView
            android:gravity="center"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="10pt"
            android:text="@string/qlt">

        </TextView>
        <Button
            android:id="@+id/btnReload"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="@drawable/ic_baseline_refresh_24">

        </Button>




    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginBottom="10dp"
        android:gravity="top">

        <EditText
            android:id="@+id/edtSearch"
            android:background="@drawable/backgroudbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textAlignment="center"
            android:hint="Tìm theo mã hoặc tên thuốc" />

        <Button
            android:id="@+id/btnseach"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_baseline_search_24"
            android:layout_centerVertical="true"
          />

        </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="5dp"
        android:background="@drawable/rounded_corner"
        android:layout_weight="6">

        <ListView
            android:id="@+id/lstThuoc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            >
        </ListView>

    </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="40dp"
            android:layout_weight="1">
            <Button
                android:background="@drawable/backgroudbtnadd"
                android:id="@+id/btnadd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="@string/btnADD"
                android:layout_weight="1"></Button>
            <Button
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroudbtnedit"
                android:id="@+id/btnedit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="@string/btnEDIT"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"></Button>
            <Button
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroudbtndelete"
                android:id="@+id/btndelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:text="@string/btnDelete"
                android:layout_weight="1"></Button>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>